force-app/main/default/objects/PricebookEntry/fields/ServiceJob_Key__c.field-meta.xml
<CustomField>
    <fullName>ServiceJob_Key__c</fullName>
    <formula>Product2.ExternalID_DMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ServiceJob Key</label>
    <type>Text</type>
</CustomField>