force-app/main/default/objects/PricebookEntry/fields/Symptom_Condition__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Symptom/Condition</label>
    <referenceTo>Symptom_Condition__c</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>